fix scroll to content on IOS device

--- a/wordweb-app/src/main/resources/scss/_drodpown.scss
+++ b/wordweb-app/src/main/resources/scss/_drodpown.scss
@@ -111,8 +111,6 @@
     position: relative;
 
     .nav-link-icon {
-      position: absolute;
-      right: 8px;
       display: flex;
       align-items: center;
       justify-content: center;
